src/resolver/snapshots/rv__resolver__tests__git_pkg_with_remote_dep.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
gsm=2.2.2 (git(url: https://github.com/Gilead-BioStats/gsm, sha: somethinglikeasha, directory: None, tag: Some("v2.2.2"), branch: None), type=source, path='', from_lockfile=false, from_remote=false)
broom=1.0.7 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
cli=3.6.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
DBI=1.2.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
dbplyr=2.5.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
dplyr=1.1.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
ggplot2=3.5.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
glue=1.8.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
gt=0.11.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
htmltools=0.5.8.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
htmlwidgets=1.6.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
jsonlite=1.8.9 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
lifecycle=1.0.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
log4r=0.4.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
magrittr=2.0.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
purrr=1.0.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
rlang=1.1.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
stringr=1.5.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
tibble=3.2.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
tidyr=1.3.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
yaml=2.3.10 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
clindata=1.0.5 (git(url: https://github.com/Gilead-BioStats/clindata, sha: somethinglikeasha, directory: None, tag: None, branch: None), type=source, path='', from_lockfile=false, from_remote=true)
covr=3.6.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
DT=0.33 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
duckdb=1.1.3-1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
fontawesome=0.5.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
gggenes=0.5.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
ggiraph=0.8.11 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
here=1.0.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
knitr=1.49 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
lamW=2.2.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
lubridate=1.9.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
pander=0.6.5 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
pkgdown=2.1.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
riskmetric=0.2.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
rmarkdown=2.29 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
roxygen2=7.3.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
safetyData=1.0.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
styler=1.10.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
testthat=3.2.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
usethis=3.1.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
withr=3.0.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
backports=1.5.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
generics=0.1.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
blob=1.2.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
pillar=1.9.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
R6=2.5.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
tidyselect=1.2.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
vctrs=0.6.5 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
gtable=0.3.6 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
isoband=0.2.7 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
scales=1.3.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
base64enc=0.1-3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
bigD=0.3.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
bitops=1.0-9 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
commonmark=1.9.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
fs=1.6.5 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
juicyjuice=0.1.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
markdown=1.13 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
reactable=0.4.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
sass=0.4.9 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
xml2=1.3.6 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
digest=0.6.37 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
fastmap=1.2.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
stringi=1.8.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
fansi=1.0.6 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
pkgconfig=2.0.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
cpp11=0.5.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
arrow=18.1.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
data.table=1.16.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
readr=2.1.5 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
rex=1.2.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
httr=1.4.7 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
crayon=1.5.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
httpuv=1.6.15 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
crosstalk=1.2.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
jquerylib=0.1.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
promises=1.3.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
ggfittext=0.10.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
Rcpp=1.0.13-1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
systemfonts=1.1.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
uuid=1.2-1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
rprojroot=2.0.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
evaluate=1.0.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
highr=0.11 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
xfun=0.49 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
RcppParallel=5.1.9 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
timechange=0.3.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
bslib=0.8.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
callr=3.7.6 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
desc=1.4.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
downlit=0.4.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
httr2=1.0.7 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
openssl=2.2.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
ragg=1.3.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
whisker=0.4.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
curl=6.0.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
urltools=1.7.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
memoise=2.0.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
BiocManager=1.30.25 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
cranlogs=2.1.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
pkgload=1.4.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
devtools=2.4.5 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
tinytex=0.54 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
brew=1.0-10 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
R.cache=0.16.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
brio=1.1.5 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
praise=1.0.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
processx=3.8.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
ps=1.8.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
waldo=0.6.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
clipr=0.8.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
gert=2.1.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
gh=1.4.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
rappdirs=0.3.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
rstudioapi=0.17.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
utf8=1.2.4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
farver=2.1.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
labeling=0.4.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
munsell=0.5.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
RColorBrewer=1.1-3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
viridisLite=0.4.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
V8=6.0.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
reactR=0.6.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
assertthat=0.2.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
bit64=4.5.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
hms=1.1.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
vroom=1.6.5 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
tzdb=0.4.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
lazyeval=0.2.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
mime=0.12 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
later=1.4.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
shades=1.4.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
gridtext=0.1.5 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
cachem=1.1.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
askpass=1.2.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
textshaping=0.4.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
triebeard=0.4.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
pkgbuild=1.4.5 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
ellipsis=0.3.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
miniUI=0.1.1.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
profvis=0.4.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
rcmdcheck=1.4.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
remotes=2.5.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
rversions=2.1.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
sessioninfo=1.2.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
urlchecker=1.0.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
R.methodsS3=1.8.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
R.oo=1.27.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
R.utils=2.12.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
diffobj=0.3.5 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
credentials=2.0.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
sys=3.4.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
zip=2.3.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
gitcreds=0.1.2 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
ini=0.3.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
colorspace=2.1-1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
bit=4.5.0.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
progress=1.2.3 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
png=0.1-8 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
jpeg=0.1-10 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
shiny=1.10.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
prettyunits=1.2.0 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
xopen=1.0.1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
xtable=1.8-4 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
sourcetools=0.1.7-1 (repository(url: http://posit), type=source, path='', from_lockfile=false, from_remote=false)
