src/resolver/snapshots/rv__resolver__tests__git_pkg_with_remote_dep_overridden.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
gsm.app=2.3.0.9000 (git(url: https://github.com/Gilead-BioStats/gsm.app, sha: abc, directory: None, tag: Some("v2.3.0"), branch: None), type=source, path='', from_lockfile=false, from_remote=false)
bslib=0.8.0 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
cli=3.6.3 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
dplyr=1.1.4 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
favawesome=0.1.1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
glue=1.8.0 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
gsm=2.2.2 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
htmltools=0.5.8.1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
htmlwidgets=1.6.4 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
jsonlite=1.8.9 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
magrittr=2.0.3 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
purrr=1.0.2 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
rlang=1.1.4 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
shiny=1.10.0 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
shinyjs=2.1.0 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
yaml=2.3.10 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
base64enc=0.1-3 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
cachem=1.1.0 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
fastmap=1.2.0 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
jquerylib=0.1.4 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
lifecycle=1.0.4 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
memoise=2.0.1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
mime=0.12 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
sass=0.4.9 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
generics=0.1.3 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
pillar=1.10.0 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
R6=2.5.1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
tibble=3.2.1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
tidyselect=1.2.1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
vctrs=0.6.5 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
fontawesome=0.5.3 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
rsvg=2.6.1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
digest=0.6.37 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
knitr=1.49 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
rmarkdown=2.29 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
httpuv=1.6.15 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
xtable=1.8-4 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
sourcetools=0.1.7-1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
later=1.4.1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
promises=1.3.2 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
crayon=1.5.3 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
withr=3.0.2 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
commonmark=1.9.2 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
fs=1.6.5 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
rappdirs=0.3.3 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
utf8=1.2.4 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
fansi=1.0.6 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
pkgconfig=2.0.3 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
evaluate=1.0.1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
highr=0.11 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
xfun=0.49 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
tinytex=0.54 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
Rcpp=1.0.13-1 (repository(name: custom, url: http://custom), type=binary, path='', from_lockfile=false, from_remote=false)
