src/resolver/snapshots/rv__resolver__tests__git_typo_not_resolved_from_repo.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
rv.git.pkgD=0.0.1 (repository(url: http://repo1/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
--- unresolved --- 
rv.git.pkgA [listed in rproject.toml]: Could not fetch repository https://github.com/dummy/rv.git.typo (ref: Branch("main")) DESCRIPTION file not found
--- requirement failures --- 
rv.git.pkgA : rv.git.pkgD requires (>= 0.0.5)
