src/resolver/snapshots/rv__resolver__tests__higher_r_version.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
cluster=2.1.7 (repository(name: posit, url: http://posit), type=binary, path='4.5.0/Recommended', from_lockfile=false, from_remote=false)
