src/resolver/snapshots/rv__resolver__tests__local_dep.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
dummy=0.0.0.9001 (local(path: dummy-pkg), type=source, path='', from_lockfile=false, from_remote=false)
R6=2.5.1 (repository(url: http://cran/), type=binary, path='', from_lockfile=false, from_remote=false)
