src/resolver/snapshots/rv__resolver__tests__local_dep_monorepo.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
pkg=0.0.0.9000 (local(path: example_projects/local-monorepo/local, directory: Some("R/pkg")), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
