src/resolver/snapshots/rv__resolver__tests__local_dep_not_found.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
--- unresolved --- 
dummy [listed in rproject.toml]: unknown doesn't exist.
