src/resolver/snapshots/rv__resolver__tests__multi-repo-combination-no-suggests.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
slurmtools=0.1.2 (repository(url: http://a2-ai-universe), type=source, path='', from_lockfile=false, from_remote=false)
brio=1.1.5 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
dplyr=1.1.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
fs=1.6.5 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
glue=1.8.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
jsonlite=1.8.9 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
processx=3.8.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
purrr=1.0.2 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
rlang=1.1.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
tibble=3.2.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
whisker=0.4.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
withr=3.0.2 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
here=1.0.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
cli=3.6.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
stringi=1.8.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
hms=1.1.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
lifecycle=1.0.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
generics=0.1.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
magrittr=2.0.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
pillar=1.9.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
R6=2.5.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
tidyselect=1.2.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
vctrs=0.6.5 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
ps=1.8.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
fansi=1.0.6 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
pkgconfig=2.0.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
rprojroot=2.0.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
utf8=1.2.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
