src/resolver/snapshots/rv__resolver__tests__multi-repo-combination-suggests-complete.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
slurmtools=0.1.2 (repository(url: http://a2-ai-universe), type=source, path='', from_lockfile=false, from_remote=false)
brio=1.1.5 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
dplyr=1.1.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
fs=1.6.5 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
glue=1.8.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
jsonlite=1.8.9 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
processx=3.8.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
purrr=1.0.2 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
rlang=1.1.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
tibble=3.2.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
whisker=0.4.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
withr=3.0.2 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
here=1.0.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
cli=3.6.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
stringi=1.8.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
hms=1.1.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
lifecycle=1.0.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
knitr=1.49 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
rmarkdown=2.29 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
testthat=3.2.2 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
bbr=1.12.0 (repository(url: http://gh-pkg-mirror), type=source, path='', from_lockfile=false, from_remote=false)
generics=0.1.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
magrittr=2.0.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
pillar=1.9.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
R6=2.5.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
tidyselect=1.2.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
vctrs=0.6.5 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
ps=1.8.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
fansi=1.0.6 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
pkgconfig=2.0.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
rprojroot=2.0.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
evaluate=1.0.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
highr=0.11 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
xfun=0.49 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
yaml=2.3.10 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
bslib=0.8.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
fontawesome=0.5.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
htmltools=0.5.8.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
jquerylib=0.1.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
tinytex=0.54 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
callr=3.7.6 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
desc=1.4.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
digest=0.6.37 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
pkgload=1.4.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
praise=1.0.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
waldo=0.6.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
checkmate=2.3.2 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
data.table=1.16.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
diffobj=0.3.5 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
mrgmisc=0.2.1 (repository(url: http://gh-pkg-mirror), type=source, path='', from_lockfile=false, from_remote=false)
nmrec=0.4.0 (repository(url: http://gh-pkg-mirror), type=source, path='', from_lockfile=false, from_remote=false)
readr=2.1.5 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
stringfish=0.16.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
stringr=1.5.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
tidyr=1.3.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
utf8=1.2.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
base64enc=0.1-3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
cachem=1.1.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
fastmap=1.2.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
memoise=2.0.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
mime=0.12 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
sass=0.4.9 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
pkgbuild=1.4.5 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
backports=1.5.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
crayon=1.5.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
Rcpp=1.0.13-1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
lubridate=1.9.4 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
BH=1.84.0-0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
clipr=0.8.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
vroom=1.6.5 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
cpp11=0.5.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
tzdb=0.4.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
RcppParallel=5.1.9 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
rappdirs=0.3.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
timechange=0.3.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
bit64=4.5.2 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
progress=1.2.3 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
bit=4.5.0.1 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
prettyunits=1.2.0 (repository(url: http://P3M), type=binary, path='', from_lockfile=false, from_remote=false)
